[metadata]
name = refjoin
version = attr: refjoin.__version__
url = https://github.com/yamasampo/refjoin
author = Division of Evolutionary Genetics in NIG
author_email = hyamashita@nig.ac.jp
license_file = LICENSE
description = conspospy: Join two alignments by referring to the identical sequences as a template.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = numpy
